[fix] better colors and alignment

--- a/src/assets/scss/components/_navbar.scss
+++ b/src/assets/scss/components/_navbar.scss
@@ -3,7 +3,7 @@
 
 .header {
   box-shadow: 0 2px 4px 0 rgba(0,0,0,.1);
-  background: $green-soft;
+  background: $white;
 }
 
 .header__container {
@@ -23,7 +23,6 @@
   width: 100%;
   display: flex;
   align-items: center;
-  justify-content: space-around;
 }
 
 .navbar__item {
@@ -31,7 +30,7 @@
 }
 
 .navbar__link {
-  color: $rick-blue;
+  color: $gray-hiper;
   text-decoration: none;
   font-size: 1.25rem;
   padding-bottom: 28px;
